--- a/huimin_wang_tools.ipynb
+++ b/huimin_wang_tools.ipynb
@@ -1416,6 +1416,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#input the event name and get the lat and lgt\n",
     "import requests\n",
     "import json\n",
     "api_key = 'AIzaSyAf9b6B8Bd9De9JtheV7FLnRfC9lLcSzzo'\n",
