--- a/huimin_wang_tools.ipynb
+++ b/huimin_wang_tools.ipynb
@@ -1397,14 +1397,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2456"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "#input a index and get the event name \n",
-    "def get_location(df, event_index):\n",
-    "    a = df['event_location'].iloc[event_index]\n",
-    "    return a \n",
+    "def get_location(df):\n",
+    "    event_index = int(input('Please enter the index of the event that you are interested in:'))\n",
+    "    if 0<=event_index<len(df):\n",
+    "        a = df['event_location'].iloc[event_index]\n",
+    "        return a \n",
+    "    else:\n",
+    "        print('The index is out of range, please look carefully and try again!')\n",
+    "        event_index = int(input('Please enter the index of the event that you are interested in:'))\n",
+    "        a = df['event_location'].iloc[event_index]\n",
+    "        return a\n",
+    "\n",
     "    \n",
     "    \n",
     "    \n"
