Update choose your events.ipynb

--- a/choose your events.ipynb
+++ b/choose your events.ipynb
@@ -22,12 +22,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pip install sodapy"
+    "#pip install sodapy\n",
+    "#pip install gmaps\n",
+    "#pip install "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,14 +255,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please type the index of selected event12\n"
+      "Please type the index of selected event13\n"
      ]
     }
    ],
@@ -277,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,36 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Ferry Point Park: Ferry Point Park '"
-      ]
-     },
-     "execution_count": 176,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(event['event_location'])[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 179,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "location=get_location(list(event['event_location'])[0],api_key)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -366,32 +339,32 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>12</td>\n",
-       "      <td>rangers' choice: fire making skills</td>\n",
-       "      <td>Queens</td>\n",
-       "      <td>Alley Pond Park: Alley Springfield BBQ Area Pi...</td>\n",
+       "      <th>13</th>\n",
+       "      <td>13</td>\n",
+       "      <td>lawn maintenance</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>Madison Square Park: Madison Square Park</td>\n",
        "      <td>Special Event</td>\n",
-       "      <td>2018-12-16 18:00:00</td>\n",
-       "      <td>2018-12-16 19:30:00</td>\n",
-       "      <td>7</td>\n",
+       "      <td>2018-12-03 00:01:00</td>\n",
+       "      <td>2018-12-03 12:00:00</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    index                           event_name event_borough  \\\n",
-       "12     12  rangers' choice: fire making skills        Queens   \n",
+       "    index        event_name event_borough  \\\n",
+       "13     13  lawn maintenance     Manhattan   \n",
        "\n",
-       "                                       event_location     event_type  \\\n",
-       "12  Alley Pond Park: Alley Springfield BBQ Area Pi...  Special Event   \n",
+       "                               event_location     event_type  \\\n",
+       "13  Madison Square Park: Madison Square Park   Special Event   \n",
        "\n",
        "       start_date_time       end_date_time  weekday  \n",
-       "12 2018-12-16 18:00:00 2018-12-16 19:30:00        7  "
+       "13 2018-12-03 00:01:00 2018-12-03 12:00:00        1  "
       ]
      },
-     "execution_count": 280,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,27 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Sun Dec  9 00:00:00 2018'"
-      ]
-     },
-     "execution_count": 232,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(event['start_date_time'])[0].ctime()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,21 +401,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'event_name': 'e. 72nd palyground lawn  winter closure until april 6, 2019',\n",
+       "{'event_name': 'lawn maintenance',\n",
        " 'event_borough': 'Manhattan',\n",
-       " 'event_location': 'Central Park: East 72nd Street Playground Lawns ',\n",
+       " 'event_location': 'Madison Square Park: Madison Square Park ',\n",
        " 'event_type': 'Special Event',\n",
-       " 'start_date_time': 'Sun Dec  9 00:00:00 2018',\n",
-       " 'end_date_time': 'Sun Dec  9 23:59:00 2018'}"
+       " 'start_date_time': 'Mon Dec  3 00:01:00 2018',\n",
+       " 'end_date_time': 'Mon Dec  3 12:00:00 2018'}"
       ]
      },
-     "execution_count": 266,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,13 +426,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c2e9a4194a3488eb488a402e7a1f5b0",
+       "model_id": "dd3a0ec1a3d04a80b6d45a630558a1c4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -493,6 +446,7 @@
    ],
    "source": [
     "import gmaps\n",
+    "location=get_location(event['event_location'],api_key)\n",
     "event_location=[location]\n",
     "info_box_template = '''\n",
     "<dl>\n",
@@ -503,13 +457,44 @@
     "<dt>Event Borough</dt>{event_borough}</dd>\n",
     "<dt>Event Start</dt>{start_date_time}</dd>\n",
     "<dt>Event End</dt>{end_date_time}</dd>\n",
+    "</dl>\n",
     "'''\n",
     "\n",
     "event_info = [info_box_template.format(**event)]\n",
     "marker_layer = gmaps.marker_layer(event_location,info_box_content=event_info)\n",
     "fig=gmaps.figure()\n",
+    "gmaps.configure(api_key=api_key)\n",
     "fig.add_layer(marker_layer)\n",
     "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "event_info = [info_box_template.format(**event)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The location is ambiguous, you should search for detailed information by yourself.'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "location"
    ]
   },
   {
@@ -521,23 +506,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_path(mylocation,fig,method = 'BICYCLING'):\n",
     "    global event\n",
     "    \"Method could be 'DRIVING','WALKING','BICYCLING','TRANSIT'\"\n",
-    "    gmaps.configure(api_key=my_key)\n",
-    "    start_location=get_location(list(event['event_location'])[0],api_key)\n",
+    "    start_location=get_location(event['event_location'],api_key)\n",
     "    end = str(mylocation)\n",
     "    end_location = get_location(end,api_key)\n",
-    "    \n",
     "    path = gmaps.directions_layer(start_location, end_location, travel_mode= method)#we can add waypoints and travel_mode\n",
     "    fig.add_layer(path)\n",
+    "    fig.add_layer(marker_layer)\n",
     "\n",
     "    return fig"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "find_path('columbia university',fig,method = 'TRANSIT')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
