--- a/interface.ipynb
+++ b/interface.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,6 +77,7 @@
     "        start = self.box_start.get()\n",
     "        end = self.box_end.get()\n",
     "        fig = find_path(start, end, method = 'DRIVING')\n",
+    "        self.fig = fig\n",
     "        from ipywidgets.embed import embed_minimal_html\n",
     "        embed_minimal_html('export.html', views=[fig])\n",
     "        import webbrowser\n",
@@ -86,6 +87,7 @@
     "        start = self.box_start.get()\n",
     "        end = self.box_end.get()\n",
     "        fig = find_path(start, end, method = 'WALKING')\n",
+    "        self.fig = fig\n",
     "        from ipywidgets.embed import embed_minimal_html\n",
     "        embed_minimal_html('export.html', views=[fig])\n",
     "        import webbrowser\n",
@@ -95,6 +97,7 @@
     "        start = self.box_start.get()\n",
     "        end = self.box_end.get()\n",
     "        fig = find_path(start, end, method = 'TRANSIT')\n",
+    "        self.fig = fig\n",
     "        from ipywidgets.embed import embed_minimal_html\n",
     "        embed_minimal_html('export.html', views=[fig])\n",
     "        import webbrowser\n",
@@ -104,6 +107,7 @@
     "        start = self.box_start.get()\n",
     "        end = self.box_end.get()\n",
     "        fig = find_path(start, end, method = 'BICYCLING')\n",
+    "        self.fig = fig\n",
     "        from ipywidgets.embed import embed_minimal_html\n",
     "        embed_minimal_html('export.html', views=[fig])\n",
     "        import webbrowser\n",
@@ -116,11 +120,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "window.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c7589f167bd2460eba2661d24c96185f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "start.fig"
    ]
   },
   {
