--- a/choose your events.ipynb
+++ b/choose your events.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,14 +75,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\wsyou\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,14 +255,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please type the index of selected event13\n"
+      "Please type the index of selected event1\n"
      ]
     }
    ],
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -339,32 +339,32 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>13</td>\n",
-       "      <td>lawn maintenance</td>\n",
-       "      <td>Manhattan</td>\n",
-       "      <td>Madison Square Park: Madison Square Park</td>\n",
-       "      <td>Special Event</td>\n",
-       "      <td>2018-12-03 00:01:00</td>\n",
-       "      <td>2018-12-03 12:00:00</td>\n",
+       "      <th>1</th>\n",
        "      <td>1</td>\n",
+       "      <td>e. 72nd palyground lawn  winter closure until ...</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>Central Park: East 72nd Street Playground Lawns</td>\n",
+       "      <td>Special Event</td>\n",
+       "      <td>2018-12-09</td>\n",
+       "      <td>2018-12-09 23:59:00</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    index        event_name event_borough  \\\n",
-       "13     13  lawn maintenance     Manhattan   \n",
+       "   index                                         event_name event_borough  \\\n",
+       "1      1  e. 72nd palyground lawn  winter closure until ...     Manhattan   \n",
        "\n",
-       "                               event_location     event_type  \\\n",
-       "13  Madison Square Park: Madison Square Park   Special Event   \n",
+       "                                     event_location     event_type  \\\n",
+       "1  Central Park: East 72nd Street Playground Lawns   Special Event   \n",
        "\n",
-       "       start_date_time       end_date_time  weekday  \n",
-       "13 2018-12-03 00:01:00 2018-12-03 12:00:00        1  "
+       "  start_date_time       end_date_time  weekday  \n",
+       "1      2018-12-09 2018-12-09 23:59:00        7  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,21 +401,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'event_name': 'lawn maintenance',\n",
+       "{'event_name': 'e. 72nd palyground lawn  winter closure until april 6, 2019',\n",
        " 'event_borough': 'Manhattan',\n",
-       " 'event_location': 'Madison Square Park: Madison Square Park ',\n",
+       " 'event_location': 'Central Park: East 72nd Street Playground Lawns ',\n",
        " 'event_type': 'Special Event',\n",
-       " 'start_date_time': 'Mon Dec  3 00:01:00 2018',\n",
-       " 'end_date_time': 'Mon Dec  3 12:00:00 2018'}"
+       " 'start_date_time': 'Sun Dec  9 00:00:00 2018',\n",
+       " 'end_date_time': 'Sun Dec  9 23:59:00 2018'}"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,13 +426,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd3a0ec1a3d04a80b6d45a630558a1c4",
+       "model_id": "f9f3db5f96884ed09d53e429649a2dee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -459,18 +459,17 @@
     "<dt>Event End</dt>{end_date_time}</dd>\n",
     "</dl>\n",
     "'''\n",
-    "\n",
+    "gmaps.configure(api_key=api_key)\n",
     "event_info = [info_box_template.format(**event)]\n",
     "marker_layer = gmaps.marker_layer(event_location,info_box_content=event_info)\n",
     "fig=gmaps.figure()\n",
-    "gmaps.configure(api_key=api_key)\n",
     "fig.add_layer(marker_layer)\n",
     "fig"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,16 +478,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'The location is ambiguous, you should search for detailed information by yourself.'"
+       "(40.7812695, -73.9665924)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,45 +505,190 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_path(mylocation,fig,method = 'BICYCLING'):\n",
-    "    global event\n",
+    "def find_path(start, end, method = 'BICYCLING'):\n",
     "    \"Method could be 'DRIVING','WALKING','BICYCLING','TRANSIT'\"\n",
-    "    start_location=get_location(event['event_location'],api_key)\n",
-    "    end = str(mylocation)\n",
-    "    end_location = get_location(end,api_key)\n",
+    "    import gmaps\n",
+    "    my_key = \"AIzaSyAf9b6B8Bd9De9JtheV7FLnRfC9lLcSzzo\"\n",
+    "    gmaps.configure(api_key=my_key)\n",
+    "    \n",
+    "    start = str(start)\n",
+    "    end = str(end)\n",
+    "    start_location = get_location(start,my_key)\n",
+    "    end_location = get_location(end,my_key)\n",
+    "    \n",
+    "    fig = gmaps.figure()\n",
     "    path = gmaps.directions_layer(start_location, end_location, travel_mode= method)#we can add waypoints and travel_mode\n",
     "    fig.add_layer(path)\n",
-    "    fig.add_layer(marker_layer)\n",
     "\n",
     "    return fig"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 41,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1a438bc5bff2454fb989ff356448c806",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "find_path('columbia university',fig,method = 'TRANSIT')"
+    "find_path('columbia university','time square',method = 'TRANSIT')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def information_of_route(start, end, method):\n",
+    "    my_key = \"AIzaSyAf9b6B8Bd9De9JtheV7FLnRfC9lLcSzzo\"\n",
+    "    url = f'https://maps.googleapis.com/maps/api/directions/json?origin={start}&destination={end}&mode={method}&key={my_key}'\n",
+    "    response = requests.get(url)\n",
+    "    \n",
+    "    routes = response.json()['routes'][0]\n",
+    "    legs = routes['legs'][0]\n",
+    "    distance = legs['distance']['text']\n",
+    "    duration = legs['duration']['text']\n",
+    "    start, end = legs['start_address'], legs['end_address']\n",
+    "    \n",
+    "    print(f'It takes {duration} to go from {start} to {end} by {method} and the distance is {distance}')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from tkinter import *\n",
+    "from tkinter.simpledialog import askstring\n",
+    "\n",
+    "class mclass:\n",
+    "    def __init__(self,  window):\n",
+    "        self.window = window\n",
+    "        self.box_start = Entry(window)\n",
+    "        self.box_end = Entry(window)\n",
+    "        \n",
+    "        self.button_1 = Button (window, text=\"Drive\", command=self.driving)\n",
+    "        self.button_2 = Button (window, text=\"Walk\", command=self.walking)\n",
+    "        self.button_3 = Button (window, text=\"Transit\", command=self.transit)\n",
+    "        self.button_4 = Button (window, text=\"Bicycle\", command=self.bicycling)\n",
+    "        \n",
+    "        self.box_start.pack ()\n",
+    "        self.box_end.pack ()\n",
+    "        self.button_1.pack()\n",
+    "        self.button_2.pack()\n",
+    "        self.button_3.pack()\n",
+    "        self.button_4.pack()\n",
+    "        \n",
+    "    def driving(self):\n",
+    "        start = self.box_start.get()\n",
+    "        end = self.box_end.get()\n",
+    "        fig = find_path(start, end, method = 'DRIVING')\n",
+    "        self.fig = fig\n",
+    "        information_of_route(start, end, method = 'DRIVING')\n",
+    "        from ipywidgets.embed import embed_minimal_html\n",
+    "        embed_minimal_html('export.html', views=[fig])\n",
+    "        import webbrowser\n",
+    "        webbrowser.open_new('export.html')\n",
+    "    \n",
+    "    def walking(self):\n",
+    "        start = self.box_start.get()\n",
+    "        end = self.box_end.get()\n",
+    "        fig = find_path(start, end, method = 'WALKING')\n",
+    "        self.fig = fig\n",
+    "        information_of_route(start, end, method = 'WALKING')\n",
+    "        from ipywidgets.embed import embed_minimal_html\n",
+    "        embed_minimal_html('export.html', views=[fig])\n",
+    "        import webbrowser\n",
+    "        webbrowser.open_new('export.html')\n",
+    "        \n",
+    "    def transit(self):\n",
+    "        start = self.box_start.get()\n",
+    "        end = self.box_end.get()\n",
+    "        fig = find_path(start, end, method = 'TRANSIT')\n",
+    "        self.fig = fig\n",
+    "        information_of_route(start, end, method = 'TRANSIT')\n",
+    "        from ipywidgets.embed import embed_minimal_html\n",
+    "        embed_minimal_html('export.html', views=[fig])\n",
+    "        import webbrowser\n",
+    "        webbrowser.open_new('export.html')\n",
+    "        \n",
+    "    def bicycling(self):\n",
+    "        start = self.box_start.get()\n",
+    "        end = self.box_end.get()\n",
+    "        fig = find_path(start, end, method = 'BICYCLING')\n",
+    "        self.fig = fig\n",
+    "        information_of_route(start, end, method = 'BICYCLING')\n",
+    "        from ipywidgets.embed import embed_minimal_html\n",
+    "        embed_minimal_html('export.html', views=[fig])\n",
+    "        import webbrowser\n",
+    "        webbrowser.open_new('export.html')\n",
+    "\n",
+    "\n",
+    "window= Tk()\n",
+    "start= mclass (window)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It takes 25 mins to go from 116th St & Broadway, New York, NY 10027, United States to Theater District, New York, NY, USA by DRIVING and the distance is 6.3 mi\n"
+     ]
+    }
+   ],
+   "source": [
+    "window.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e5f6e651be804ae0ad2e81084ee53c80",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "start.fig"
+   ]
   },
   {
    "cell_type": "code",
@@ -570,7 +714,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
