--- a/NYC_event.ipynb
+++ b/NYC_event.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -50,39 +50,89 @@
       "Option 5: Find route to the events \n",
       "\n",
       "Type option number to continue\n",
-      "type \"q\" to end the program1\n",
-      "Downloading From Internet......\n",
-      "Download Complete!\n",
-      "Initialize the dataset......\n"
+      "type \"q\" to end the program5\n",
+      "It takes 25 mins to go from 116th St & Broadway, New York, NY 10027, United States to Theater District, New York, NY, USA by DRIVING and the distance is 6.3 mi\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:6: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/anaconda3/lib/python3.7/sre_parse.py\", line 1021, in parse_template\n",
+      "    this = chr(ESCAPES[this][1])\n",
+      "KeyError: '\\\\u'\n",
       "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  \n"
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/anaconda3/lib/python3.7/tkinter/__init__.py\", line 1702, in __call__\n",
+      "    return self.func(*args)\n",
+      "  File \"<ipython-input-13-c4651c70f112>\", line 29, in driving\n",
+      "    embed_minimal_html('export.html', views=[fig])\n",
+      "  File \"/anaconda3/lib/python3.7/site-packages/ipywidgets/embed.py\", line 302, in embed_minimal_html\n",
+      "    snippet = embed_snippet(views, **kwargs)\n",
+      "  File \"/anaconda3/lib/python3.7/site-packages/ipywidgets/embed.py\", line 268, in embed_snippet\n",
+      "    for view_spec in data['view_specs']\n",
+      "  File \"/anaconda3/lib/python3.7/site-packages/ipywidgets/embed.py\", line 268, in <genexpr>\n",
+      "    for view_spec in data['view_specs']\n",
+      "  File \"/anaconda3/lib/python3.7/site-packages/ipywidgets/embed.py\", line 241, in escape_script\n",
+      "    return script_escape_re.sub(r'\\u003c\\1', s)\n",
+      "  File \"/anaconda3/lib/python3.7/re.py\", line 309, in _subx\n",
+      "    template = _compile_repl(template, pattern)\n",
+      "  File \"/anaconda3/lib/python3.7/re.py\", line 300, in _compile_repl\n",
+      "    return sre_parse.parse_template(repl, pattern)\n",
+      "  File \"/anaconda3/lib/python3.7/sre_parse.py\", line 1024, in parse_template\n",
+      "    raise s.error('bad escape %s' % this, len(this))\n",
+      "re.error: bad escape \\u at position 0\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Complete!\n",
+      "It takes 25 mins to go from 116th St & Broadway, New York, NY 10027, United States to Theater District, New York, NY, USA by WALKING and the distance is 6.3 mi\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/anaconda3/lib/python3.7/sre_parse.py\", line 1021, in parse_template\n",
+      "    this = chr(ESCAPES[this][1])\n",
+      "KeyError: '\\\\u'\n",
       "\n",
-      "Choose your option (Please run the initialization first)\n",
-      "Option 1: Data Initialization \n",
-      "Option 2: Events Visualization \n",
-      "Option 3: Search by Features\n",
-      "Option 4: Select a event\n",
-      "Option 5: Find route to the events \n",
+      "During handling of the above exception, another exception occurred:\n",
       "\n",
-      "Type option number to continue\n",
-      "type \"q\" to end the program4\n",
-      "Please type the index of selected event13\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/anaconda3/lib/python3.7/tkinter/__init__.py\", line 1702, in __call__\n",
+      "    return self.func(*args)\n",
+      "  File \"<ipython-input-13-c4651c70f112>\", line 40, in walking\n",
+      "    embed_minimal_html('export.html', views=[fig])\n",
+      "  File \"/anaconda3/lib/python3.7/site-packages/ipywidgets/embed.py\", line 302, in embed_minimal_html\n",
+      "    snippet = embed_snippet(views, **kwargs)\n",
+      "  File \"/anaconda3/lib/python3.7/site-packages/ipywidgets/embed.py\", line 268, in embed_snippet\n",
+      "    for view_spec in data['view_specs']\n",
+      "  File \"/anaconda3/lib/python3.7/site-packages/ipywidgets/embed.py\", line 268, in <genexpr>\n",
+      "    for view_spec in data['view_specs']\n",
+      "  File \"/anaconda3/lib/python3.7/site-packages/ipywidgets/embed.py\", line 241, in escape_script\n",
+      "    return script_escape_re.sub(r'\\u003c\\1', s)\n",
+      "  File \"/anaconda3/lib/python3.7/re.py\", line 309, in _subx\n",
+      "    template = _compile_repl(template, pattern)\n",
+      "  File \"/anaconda3/lib/python3.7/re.py\", line 300, in _compile_repl\n",
+      "    return sre_parse.parse_template(repl, pattern)\n",
+      "  File \"/anaconda3/lib/python3.7/sre_parse.py\", line 1024, in parse_template\n",
+      "    raise s.error('bad escape %s' % this, len(this))\n",
+      "re.error: bad escape \\u at position 0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "Choose your option (Please run the initialization first)\n",
       "Option 1: Data Initialization \n",
@@ -149,23 +199,16 @@
     "\n",
     "    #find route\n",
     "    if option ==5:\n",
-    "        if df is 0:\n",
-    "            print ('Please initialize data first!')\n",
-    "            continue \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "    \n",
+    "        window= Tk()\n",
+    "        start= mclass (window)\n",
+    "        window.mainloop()\n",
     "    \n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,16 +419,16 @@
     "        lng = location['lng'] \n",
     "        return lat, lng\n",
     "    except:\n",
-    "        address_=input('The location in our database is ambiguous, please search on internet for the event location, type q to quit')\n",
-    "        if address_=='q':\n",
-    "            return \n",
-    "        else:\n",
-    "            return get_location(address_)"
+    "        address_=input('The location is ambiguous, please search on internet for the event location, type q to quit')\n",
+    "#         if address_=='q':\n",
+    "#             return \n",
+    "#         else:\n",
+    "#             return get_location(address_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,6 +453,129 @@
     "    fig.add_layer(marker_layer)\n",
     "    return fig"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_path(start, end, method = 'BICYCLING'):\n",
+    "    \"Method could be 'DRIVING','WALKING','BICYCLING','TRANSIT'\"\n",
+    "    import gmaps\n",
+    "    my_key = \"AIzaSyAf9b6B8Bd9De9JtheV7FLnRfC9lLcSzzo\"\n",
+    "    gmaps.configure(api_key=my_key)\n",
+    "    \n",
+    "    start = str(start)\n",
+    "    end = str(end)\n",
+    "    start_location = get_location(start)\n",
+    "    end_location = get_location(end)\n",
+    "    \n",
+    "    fig = gmaps.figure()\n",
+    "    path = gmaps.directions_layer(start_location, end_location, travel_mode= method)#we can add waypoints and travel_mode\n",
+    "    fig.add_layer(path)\n",
+    "\n",
+    "    return fig\n",
+    "\n",
+    "def information_of_route(start, end, method):\n",
+    "    my_key = \"AIzaSyAf9b6B8Bd9De9JtheV7FLnRfC9lLcSzzo\"\n",
+    "    url = f'https://maps.googleapis.com/maps/api/directions/json?origin={start}&destination={end}&mode={method}&key={my_key}'\n",
+    "    response = requests.get(url)\n",
+    "    \n",
+    "    routes = response.json()['routes'][0]\n",
+    "    legs = routes['legs'][0]\n",
+    "    distance = legs['distance']['text']\n",
+    "    duration = legs['duration']['text']\n",
+    "    start, end = legs['start_address'], legs['end_address']\n",
+    "    \n",
+    "    print(f'It takes {duration} to go from {start} to {end} by {method} and the distance is {distance}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tkinter import *\n",
+    "from tkinter.simpledialog import askstring\n",
+    "\n",
+    "class mclass:\n",
+    "    def __init__(self,  window):\n",
+    "        self.window = window\n",
+    "        self.box_start = Entry(window)\n",
+    "        self.box_end = Entry(window)\n",
+    "        \n",
+    "        self.button_1 = Button (window, text=\"Drive\", command=self.driving)\n",
+    "        self.button_2 = Button (window, text=\"Walk\", command=self.walking)\n",
+    "        self.button_3 = Button (window, text=\"Transit\", command=self.transit)\n",
+    "        self.button_4 = Button (window, text=\"Bicycle\", command=self.bicycling)\n",
+    "        \n",
+    "        self.box_start.pack ()\n",
+    "        self.box_end.pack ()\n",
+    "        self.button_1.pack()\n",
+    "        self.button_2.pack()\n",
+    "        self.button_3.pack()\n",
+    "        self.button_4.pack()\n",
+    "        \n",
+    "    def driving(self):\n",
+    "        start = self.box_start.get()\n",
+    "        end = self.box_end.get()\n",
+    "        fig = find_path(start, end, method = 'DRIVING')\n",
+    "        self.fig = fig\n",
+    "        information_of_route(start, end, method = 'DRIVING')\n",
+    "        from ipywidgets.embed import embed_minimal_html\n",
+    "        embed_minimal_html('export.html', views=[fig])\n",
+    "        import webbrowser\n",
+    "        webbrowser.open_new('export.html')\n",
+    "    \n",
+    "    def walking(self):\n",
+    "        start = self.box_start.get()\n",
+    "        end = self.box_end.get()\n",
+    "        fig = find_path(start, end, method = 'WALKING')\n",
+    "        self.fig = fig\n",
+    "        information_of_route(start, end, method = 'WALKING')\n",
+    "        from ipywidgets.embed import embed_minimal_html\n",
+    "        embed_minimal_html('export.html', views=[fig])\n",
+    "        import webbrowser\n",
+    "        webbrowser.open_new('export.html')\n",
+    "        \n",
+    "    def transit(self):\n",
+    "        start = self.box_start.get()\n",
+    "        end = self.box_end.get()\n",
+    "        fig = find_path(start, end, method = 'TRANSIT')\n",
+    "        self.fig = fig\n",
+    "        information_of_route(start, end, method = 'TRANSIT')\n",
+    "        from ipywidgets.embed import embed_minimal_html\n",
+    "        embed_minimal_html('export.html', views=[fig])\n",
+    "        import webbrowser\n",
+    "        webbrowser.open_new('export.html')\n",
+    "        \n",
+    "    def bicycling(self):\n",
+    "        start = self.box_start.get()\n",
+    "        end = self.box_end.get()\n",
+    "        fig = find_path(start, end, method = 'BICYCLING')\n",
+    "        self.fig = fig\n",
+    "        information_of_route(start, end, method = 'BICYCLING')\n",
+    "        from ipywidgets.embed import embed_minimal_html\n",
+    "        embed_minimal_html('export.html', views=[fig])\n",
+    "        import webbrowser\n",
+    "        webbrowser.open_new('export.html')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
