--- a/NYC_event.ipynb
+++ b/NYC_event.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -54,28 +54,8 @@
       "Option 6: Find route to the events \n",
       "\n",
       "Type option number to continue\n",
-      "type \"q\" to end the program1\n",
-      "Downloading From Internet......\n",
-      "Download Complete!\n",
-      "Initialize dataset......\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:6: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Complete!\n",
+      "type \"q\" to end the program5\n",
+      "Please initialize data first!\n",
       "\n",
       "Choose your option (Please run the initialization first)\n",
       "Option 1: Data Initialization \n",
@@ -86,8 +66,8 @@
       "Option 6: Find route to the events \n",
       "\n",
       "Type option number to continue\n",
-      "type \"q\" to end the program5\n",
-      "Please type the index of selected event16\n",
+      "type \"q\" to end the program6\n",
+      "It takes 25 mins to go from 116th St & Broadway, New York, NY 10027, United States to Theater District, New York, NY, USA by DRIVING and the distance is 6.3 mi\n",
       "\n",
       "Choose your option (Please run the initialization first)\n",
       "Option 1: Data Initialization \n",
@@ -371,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,6 +451,7 @@
     "class mclass:\n",
     "    def __init__(self,  window):\n",
     "        self.window = window\n",
+    "        self.label = Label(window, text='We can help you find the right path!')\n",
     "        self.box_start = Entry(window)\n",
     "        self.box_end = Entry(window)\n",
     "        \n",
@@ -479,6 +460,7 @@
     "        self.button_3 = Button (window, text=\"Transit\", command=self.transit)\n",
     "        self.button_4 = Button (window, text=\"Bicycle\", command=self.bicycling)\n",
     "        \n",
+    "        self.label.pack()\n",
     "        self.box_start.pack ()\n",
     "        self.box_end.pack ()\n",
     "        self.button_1.pack()\n",
@@ -533,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,7 +750,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
