--- a/NYC_event.ipynb
+++ b/NYC_event.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Choose your option (Please run the initialization first)\n",
+      "Option 1: Data Initialization \n",
+      "Option 2: Events heatmap(this will take a little bit long, like 20 mins )\n",
+      "Option 3: Events wordcloud\n",
+      "Option 4: Search by Features\n",
+      "Option 5: Select a event\n",
+      "Option 6: Find route to the events \n",
+      "\n",
+      "Type option number to continue\n",
+      "type \"q\" to end the program6\n",
+      "\n",
+      "Choose your option (Please run the initialization first)\n",
+      "Option 1: Data Initialization \n",
+      "Option 2: Events heatmap(this will take a little bit long, like 20 mins )\n",
+      "Option 3: Events wordcloud\n",
+      "Option 4: Search by Features\n",
+      "Option 5: Select a event\n",
+      "Option 6: Find route to the events \n",
+      "\n",
+      "Type option number to continue\n",
+      "type \"q\" to end the programq\n"
+     ]
+    }
+   ],
+   "source": [
+    "option=1\n",
+    "df=0\n",
+    "while option!='q':\n",
+    "    option=input(ui+'''\n",
+    "Type option number to continue\n",
+    "type \"q\" to end the program''')\n",
+    "    \n",
+    "    if option=='q':\n",
+    "        break\n",
+    "    try:\n",
+    "        option=int(option)\n",
+    "    except:\n",
+    "        print (\"please type integer between 1 and 5\")\n",
+    "        continue\n",
+    "    if option not in [1,2,3,4,5,6]:\n",
+    "        print (\"please type integer between 1 and 5\")\n",
+    "        continue\n",
+    "    \n",
+    "    # initialization \n",
+    "    if option ==1:\n",
+    "        if df==0:\n",
+    "            df=get_data()\n",
+    "            df=initialize()\n",
+    "        else:\n",
+    "            print('you have already initialized it!')\n",
+    "            continue\n",
+    "    \n",
+    "    # heatmap \n",
+    "    if option ==2:\n",
+    "        if df is 0:\n",
+    "            print ('Please initialize data first!')\n",
+    "            continue\n",
+    "        get_heatmap()\n",
+    "            \n",
+    "            \n",
+    "    # wordcloud\n",
+    "    if option ==3:\n",
+    "        if df is 0:\n",
+    "            print ('Please initialize data first!')\n",
+    "            continue\n",
+    "        text_cloud(df)\n",
+    "        \n",
+    "        \n",
+    "    #search feature \n",
+    "    if option ==4:\n",
+    "        if df is 0:\n",
+    "            print ('Please initialize data first!')\n",
+    "            continue\n",
+    "        df_search =search()\n",
+    "        print(df_search)\n",
+    "    \n",
+    "    \n",
+    "    #select event\n",
+    "    if option ==5:\n",
+    "        if df is 0:\n",
+    "            print ('Please initialize data first!')\n",
+    "            continue\n",
+    "        event=select()\n",
+    "        event=to_dict(event)\n",
+    "        map_marker(event)\n",
+    "        \n",
+    "\n",
+    "    #find route\n",
+    "    if option ==6:\n",
+    "        window= Tk()\n",
+    "        start= mclass (window)\n",
+    "        window.mainloop()\n",
+    "    \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,8 +438,10 @@
     "class mclass:\n",
     "    def __init__(self,  window):\n",
     "        self.window = window\n",
-    "        self.label = Label(window, text='We can help you find the right path!')\n",
+    "        self.label = Label(window, text='We can help you find the right path!',font=(\"Arial Bold\", 25))\n",
+    "        self.label_from = Label(window, text='from')\n",
     "        self.box_start = Entry(window)\n",
+    "        self.label_to = Label(window, text='to')\n",
     "        self.box_end = Entry(window)\n",
     "        \n",
     "        self.button_1 = Button (window, text=\"Drive\", command=self.driving)\n",
@@ -342,7 +450,9 @@
     "        self.button_4 = Button (window, text=\"Bicycle\", command=self.bicycling)\n",
     "        \n",
     "        self.label.pack()\n",
+    "        self.label_from.pack()\n",
     "        self.box_start.pack ()\n",
+    "        self.label_to.pack()\n",
     "        self.box_end.pack ()\n",
     "        self.button_1.pack()\n",
     "        self.button_2.pack()\n",
@@ -396,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,80 +610,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading From Internet......\n",
+      "Download Complete!\n",
+      "Initialize dataset......\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Complete!\n",
+      "Please type the index of selected event11\n",
+      "The location is ambiguous, please search on internet for the event location, type q to quitcolumbia\n",
+      "The location is ambiguous, please search on internet for the event location, type q to quitcolumbia university\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "33581557b4094fc88a569c66b84f7619",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df=get_data()\n",
+    "df=initialize()\n",
+    "event=select()\n",
+    "event=to_dict(event)\n",
+    "map_marker(event)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "option=1\n",
-    "df=0\n",
-    "while option!='q':\n",
-    "    option=input(ui+'''\n",
-    "Type option number to continue\n",
-    "type \"q\" to end the program''')\n",
-    "    \n",
-    "    if option=='q':\n",
-    "        break\n",
-    "    try:\n",
-    "        option=int(option)\n",
-    "    except:\n",
-    "        print (\"please type integer between 1 and 5\")\n",
-    "        continue\n",
-    "    if option not in [1,2,3,4,5,6]:\n",
-    "        print (\"please type integer between 1 and 5\")\n",
-    "        continue\n",
-    "    \n",
-    "    # initialization \n",
-    "    if option ==1:\n",
-    "        if df==0:\n",
-    "            df=get_data()\n",
-    "            df=initialize()\n",
-    "        else:\n",
-    "            print('you have already initialized it!')\n",
-    "            continue\n",
-    "    \n",
-    "    # heatmap \n",
-    "    if option ==2:\n",
-    "        if df is 0:\n",
-    "            print ('Please initialize data first!')\n",
-    "            continue\n",
-    "        get_heatmap()\n",
-    "            \n",
-    "            \n",
-    "    # wordcloud\n",
-    "    if option ==3:\n",
-    "        if df is 0:\n",
-    "            print ('Please initialize data first!')\n",
-    "            continue\n",
-    "        text_cloud(df)\n",
-    "        \n",
-    "        \n",
-    "    #search feature \n",
-    "    if option ==4:\n",
-    "        if df is 0:\n",
-    "            print ('Please initialize data first!')\n",
-    "            continue\n",
-    "        df_search =search()\n",
-    "        print(df_search)\n",
-    "    \n",
-    "    \n",
-    "    #select event\n",
-    "    if option ==5:\n",
-    "        if df is 0:\n",
-    "            print ('Please initialize data first!')\n",
-    "            continue\n",
-    "        event=select()\n",
-    "        event=to_dict(event)\n",
-    "        map_marker(event)\n",
-    "        \n",
-    "\n",
-    "    #find route\n",
-    "    if option ==6:\n",
-    "        window= Tk()\n",
-    "        start= mclass (window)\n",
-    "        window.mainloop()\n",
-    "    \n",
-    "        "
+    "address=event['event_location'].strip()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "address=address.replace(' ','+')\n",
+    "url='https://maps.googleapis.com/maps/api/place/textsearch/json?key=%s&query=%s&fields=formatted_address'% (api_key,address) \n",
+    "response = requests.get(url)\n",
+    "result = json.loads(response.content)\n",
+    "try:\n",
+    "    location = result['results'][0]['geometry']['location']\n",
+    "    lat = location['lat']    \n",
+    "    lng = location['lng'] \n",
+    "except:\n",
+    "    address_=input('The location is ambiguous, please search on internet for the event location, type q to quit')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b0d7a4471ba94ce2b35ab114687808e7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "map_marker(event)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
