--- a/NYC_event.ipynb
+++ b/NYC_event.ipynb
@@ -539,7 +539,11 @@
     "        if df is 0:\n",
     "            print ('Please initialize data first!')\n",
     "            continue\n",
-    "        get_heatmap()\n",
+    "        fig = get_heatmap()\n",
+    "        from ipywidgets.embed import embed_minimal_html\n",
+    "        embed_minimal_html('export.html', views=[fig])\n",
+    "        import webbrowser\n",
+    "        webbrowser.open_new('export.html')\n",
     "            \n",
     "            \n",
     "    # wordcloud\n",
@@ -556,6 +560,7 @@
     "            print ('Please initialize data first!')\n",
     "            continue\n",
     "        df_search =search()\n",
+    "        \n",
     "        print(df_search)\n",
     "    \n",
     "    \n",
@@ -566,7 +571,11 @@
     "            continue\n",
     "        event=select()\n",
     "        event=to_dict(event)\n",
-    "        map_marker(event)\n",
+    "        fig = map_marker(event)\n",
+    "        from ipywidgets.embed import embed_minimal_html\n",
+    "        embed_minimal_html('export.html', views=[fig])\n",
+    "        import webbrowser\n",
+    "        webbrowser.open_new('export.html')\n",
     "        \n",
     "\n",
     "    #find route\n",
