Update NYC_event and requirements

--- a/NYC_event.ipynb
+++ b/NYC_event.ipynb
@@ -15,7 +15,11 @@
     "import folium\n",
     "import wordcloud\n",
     "from tkinter import *\n",
-    "from tkinter.simpledialog import askstring"
+    "from tkinter.simpledialog import askstring\n",
+    "import matplotlib.pyplot as plt\n",
+    "import nltk\n",
+    "from scipy.misc.pilutil import imread, imsave,imresize\n",
+    "from wordcloud import WordCloud, STOPWORDS"
    ]
   },
   {
@@ -293,7 +297,6 @@
    "source": [
     "def find_path(start, end, method = 'BICYCLING'):\n",
     "    \"Method could be 'DRIVING','WALKING','BICYCLING','TRANSIT'\"\n",
-    "    import gmaps\n",
     "    my_key = api_key\n",
     "    gmaps.configure(api_key=my_key)\n",
     "    \n",
@@ -476,11 +479,6 @@
    "outputs": [],
    "source": [
     "def text_cloud(df):\n",
-    "\n",
-    "    import matplotlib.pyplot as plt\n",
-    "    import nltk\n",
-    "    from scipy.misc.pilutil import imread, imsave,imresize\n",
-    "    from wordcloud import WordCloud, STOPWORDS\n",
     "    motive=df['event_name'].str.cat(sep = '-')\n",
     "\n",
     "    words=nltk.tokenize.word_tokenize(motive)\n",
