option2 delete pup out
delete pup out

--- a/NYC_event.ipynb
+++ b/NYC_event.ipynb
@@ -537,11 +537,7 @@
     "        if df is 0:\n",
     "            print ('Please initialize data first!')\n",
     "            continue\n",
-    "        fig = get_heatmap()\n",
-    "        from ipywidgets.embed import embed_minimal_html\n",
-    "        embed_minimal_html('export.html', views=[fig])\n",
-    "        import webbrowser\n",
-    "        webbrowser.open_new('export.html')\n",
+    "        get_heatmap()\n",
     "            \n",
     "            \n",
     "    # wordcloud\n",
