--- a/NYC_event.ipynb
+++ b/NYC_event.ipynb
@@ -501,16 +501,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Choose your option (Please run the initialization first)\n",
+      "Option 1: Data Initialization \n",
+      "Option 2: Events heatmap(this will take a little bit long, like 20 mins )\n",
+      "Option 3: Events wordcloud\n",
+      "Option 4: Search by Features\n",
+      "Option 5: Select a event\n",
+      "Option 6: Find route to the events \n",
+      "\n",
+      "Type option number to continue\n",
+      "type \"q\" to end the program  q\n"
+     ]
+    }
+   ],
    "source": [
     "option=1\n",
     "df=0\n",
     "while option!='q':\n",
     "    option=input(ui+'''\n",
     "Type option number to continue\n",
-    "type \"q\" to end the program''')\n",
+    "type \"q\" to end the program  ''')\n",
     "    \n",
     "    if option=='q':\n",
     "        break\n",
@@ -545,6 +563,7 @@
     "        if df is 0:\n",
     "            print ('Please initialize data first!')\n",
     "            continue\n",
+    "        print('working')\n",
     "        text_cloud(df)\n",
     "        \n",
     "        \n",
@@ -578,6 +597,13 @@
     "        start= mclass (window)\n",
     "        window.mainloop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
